--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,17 @@
-# FastAPI and web server dependencies
 fastapi
 uvicorn[standard]
 python-multipart
-
-# Data processing and analysis
+groq
+requests
+beautifulsoup4
 pandas
 numpy
-pyarrow
-openpyxl
-xlrd
-
-# S3 / DuckDB
-duckdb
-
-# Web scraping
-aiohttp
-beautifulsoup4
-
-# Machine Learning and Statistics (used for regression)
-scipy
-
-# Visualization
 matplotlib
 seaborn
-
-# LLM Integration
-groq
-
-# Utilities
+scipy
+lxml
 python-dotenv
+pydantic
+aiofiles
+Pillow
+google-genai
